PR/40274: Takahiro Kambe: "P" flag stops rotating files.